added navbar and still styling

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -3,3 +3,16 @@ body
 background-color:#FF4262;
 font-family:'Bungee Shade';
 }
+
+.navbar {
+  background-color: white;
+  color: black;
+}
+
+#rainbow {
+  height: 10%;
+  width: 10%;
+  margin-top: 10px;
+  margin-right: 10px;
+
+}
